{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 13,
  "lineage": "3af83c30-11b9-e278-8807-45db4db56d1a",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group/sg-0f5cc9bf439c81a8d",
            "description": "Allow ssh and http/s",
            "egress": [],
            "id": "sg-0f5cc9bf439c81a8d",
            "ingress": [],
            "name": "ssh+http",
            "name_prefix": "",
            "owner_id": "637423201723",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bac089a0f51e6c6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_subnet.tf_subnet1",
            "module.vpc.aws_subnet.tf_subnet2",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tf_sgegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-0ac75c9d45194c76d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ac75c9d45194c76d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f5cc9bf439c81a8d",
            "security_group_rule_id": "sgr-0ac75c9d45194c76d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.tf_sg_1",
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_subnet.tf_subnet1",
            "module.vpc.aws_subnet.tf_subnet2",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_sgingress1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-051e2516c83c6b698",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-051e2516c83c6b698",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f5cc9bf439c81a8d",
            "security_group_rule_id": "sgr-051e2516c83c6b698",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.tf_sg_1",
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_subnet.tf_subnet1",
            "module.vpc.aws_subnet.tf_subnet2",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_sgingress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-04fd99e4ecb55c8a9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04fd99e4ecb55c8a9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f5cc9bf439c81a8d",
            "security_group_rule_id": "sgr-04fd99e4ecb55c8a9",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.tf_sg_1",
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_subnet.tf_subnet1",
            "module.vpc.aws_subnet.tf_subnet2",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_sgingress3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-02b25af07ae431146",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-02b25af07ae431146",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f5cc9bf439c81a8d",
            "security_group_rule_id": "sgr-02b25af07ae431146",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.tf_sg_1",
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_subnet.tf_subnet1",
            "module.vpc.aws_subnet.tf_subnet2",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:internet-gateway/igw-0aceee1f9e6585b4b",
            "id": "igw-0aceee1f9e6585b4b",
            "owner_id": "637423201723",
            "tags": {
              "Name": "tf_igw_test"
            },
            "tags_all": {
              "Name": "tf_igw_test"
            },
            "vpc_id": "vpc-0bac089a0f51e6c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:route-table/rtb-090dd3e45b2b1f79f",
            "id": "rtb-090dd3e45b2b1f79f",
            "owner_id": "637423201723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aceee1f9e6585b4b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_rt_test"
            },
            "tags_all": {
              "Name": "tf_rt_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bac089a0f51e6c6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee788148916c9f92",
            "route_table_id": "rtb-090dd3e45b2b1f79f",
            "subnet_id": "subnet-0e1a941c151a52a10"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_subnet.tf_subnet1",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06489064b4f55acf7",
            "route_table_id": "rtb-090dd3e45b2b1f79f",
            "subnet_id": "subnet-0837e3a905fd665fb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_rt",
            "module.vpc.aws_subnet.tf_subnet2",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:subnet/subnet-0e1a941c151a52a10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a941c151a52a10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423201723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_test1"
            },
            "tags_all": {
              "Name": "tf_subnet_test1"
            },
            "vpc_id": "vpc-0bac089a0f51e6c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:subnet/subnet-0837e3a905fd665fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0837e3a905fd665fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423201723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_test2"
            },
            "tags_all": {
              "Name": "tf_subnet_test2"
            },
            "vpc_id": "vpc-0bac089a0f51e6c6c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:vpc/vpc-0bac089a0f51e6c6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01df972d3eab18777",
            "default_route_table_id": "rtb-0b91196702347c115",
            "default_security_group_id": "sg-0cbe770746b864a01",
            "dhcp_options_id": "dopt-026e9c2f4e01a946d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bac089a0f51e6c6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b91196702347c115",
            "owner_id": "637423201723",
            "tags": {
              "Name": "tf_vpc"
            },
            "tags_all": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}